# ancientgrok

./: .gitignore  ARCHITECTURE.md  FEATURES.md  FUTURE_TOOLS.md  GROK_SOTA.md  LICENSE  README.md  SETUP.md  TESTING.md  debug_loading.py  demo.sh  direct_test.py  full_demo.sh  pyproject.toml  requirements.txt  test_bibliography.py  test_cuneiform.py  test_final_cuneiform.py  test_raw_load.py  test_report.py  test_signs_fresh.py
cdli-cli/: .gitignore.  CHANGELOG.md  CONTRIBUTING.md  LICENSE.  README.md  pyproject.toml  pytest.ini
cdli-cli/docs/: API_COVERAGE.md  FEATURE_MATRIX.md  USAGE_GUIDE.md
cdli-cli/examples/: demo.sh  python_usage.py
cdli-cli/src/cdli_cli/: __init__.py  client.py  display.py  main.py  models.py  schemas.py
cdli-cli/tests/: __init__.py  test_client.py
clay-voices/: CONTRIBUTING.md  README.md  batch_500_results_raw.json  inspect_prompts.py  requirements.txt  setup.py  test_all_providers.py  test_api.py  test_bleu_pipeline.py  test_complete_extraction.py  test_grok_batch.py  test_pagination_fix.py
clay-voices/paper/: .gitignore.  compile.sh  main.tex  references.bib
clay-voices/results/: claude-opus-4-5-20251101_0shot_default.json  claude-opus-4-5-20251101_0shot_default_mono100.json  claude-opus-4-5-20251101_0shot_default_mono1000.json  claude-opus-4-5-20251101_0shot_default_mono500.json  claude-opus-4-5-20251101_1000shot_default.json  claude-opus-4-5-20251101_1000shot_minimal.json  claude-opus-4-5-20251101_100shot_default.json  claude-opus-4-5-20251101_100shot_default_mono100.json  claude-opus-4-5-20251101_100shot_default_mono1000.json  claude-opus-4-5-20251101_100shot_default_mono500.json  claude-opus-4-5-20251101_10shot_default.json  claude-opus-4-5-20251101_1250shot_minimal.json  claude-opus-4-5-20251101_1500shot_minimal.json  claude-opus-4-5-20251101_500shot_minimal.json  claude-opus-4-5-20251101_750shot_minimal.json  claude-sonnet-4-20250514_1500shot_minimal.json  grok-4-1-fast-non-reasoning_1000shot_default.json  grok-4-1-fast-non-reasoning_10shot_default.json  grok-4-1-fast-non-reasoning_2000shot_default.json  summary_claude-opus-4-5-20251101_default.json  summary_claude-opus-4-5-20251101_default_mono100.json  summary_claude-opus-4-5-20251101_default_mono1000.json  summary_claude-opus-4-5-20251101_default_mono500.json  summary_claude-opus-4-5-20251101_minimal.json  summary_claude-sonnet-4-20250514_minimal.json  summary_grok-4-1-fast-non-reasoning_default.json
clay-voices/src/: __init__.py  analysis.py  api_clients.py  benchmark.py  cost_tracker.py  data_loader.py  evaluator.py  prompt_builder.py  prompts.py  visualize.py
clay-voices/tests/: __init__.py  test_data_loader.py  test_evaluator.py
data/: README.md
desktop/reports/: AncientGrok_Capabilities_Assessment_and_Tool_Demon_20260117_194349.tex  Ancient_Babylon_Test_Report_20260117_133647.tex  Archaic_Lexical_Lists_and_Beer_in_Early_Mesopotami_20260117_211108.tex  Brief_Overview_of_Sumerian_Grammar_20260117_191844.tex  (+4 more)
docs/: BENCHMARKS.md  DATASETS.md  RESOURCES.md
scripts/: README.md  download_cuneiml.py  download_mtm24.py  download_sumtablets.py
(+30 files in other folders)
